# populacio

./: Animal.hpp  CMakeLists.old  CMakeLists.txt  Group.cpp  Group.hpp  Lifeform.hpp  Makefile  a.out
dokumentum/: CMakeLists.txt  master.tex  pop_projekt.tex
forrasfajlok/: CMakeLists.txt
forrasfajlok/testek/: Group.cpp
forrasfajlok/torzsek/: Animal.cpp
futtathato/: CMakeLists.txt  Demo.cpp  Demo.hpp.in
plottolas/: CMakeLists.txt  popplot.p
